--- a/insta clone/pro.html
+++ b/insta clone/pro.html
@@ -18,10 +18,10 @@
                 <img src="img/profile.jpg" alt="profile">
             </div>
             <div class="name">
-                <h1>K.V Sravan Kumar</h1>
+                <h1>Chowke Rohith</h1>
                 <img src="img/verify.png" alt="verify">
             </div>
-            <span>@sravan</span>
+            <span>@rohith</span>
         </div>
         <!-- about -->
         <div class="about">
